// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders correctly when disabled 1`] = `
<div
  className="l3-style-button-group-component l3-style-button-group-component--kind-secondary disabled"
>
  <div
    aria-disabled={true}
    aria-label=""
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text disabled l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text disabled l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text disabled l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text disabled l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly when disabled 2`] = `
<div
  className="l3-style-button-group-component l3-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label="as"
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with TERTIARY kind  1`] = `
<div
  className="l3-style-button-group-component l3-style-button-group-component--kind-tertiary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with componentClassName 1`] = `
<div
  className="l3-style-button-group-component testClassName l3-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with large size 1`] = `
<div
  className="l3-style-button-group-component l3-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-large l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-large l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-large l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-large l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with name 1`] = `
<div
  className="l3-style-button-group-component l3-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with value 1`] = `
<div
  className="l3-style-button-group-component l3-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="l3-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text selected l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--color-primary-active l3-style-button--right-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--right-flat l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="l3-style-button-group-component__option-text l3-style-button l3-style-button--size-small l3-style-button--kind-tertiary l3-style-button--color-primary l3-style-button--left-flat l3-style-button--prevent-click-animation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;
